# Portakal

./: .gitignore  CMakeLists.txt  CMakePresets.json  InstallExternal.bat  ReflectionManifest.h
Source/Editor/: CMakeLists.txt  ReflectionManifest.h
Source/Editor/Domain/: DomainAPI.cpp  DomainAPI.h  DomainFile.cpp  DomainFile.h  DomainFileDescriptor.h  DomainFolder.cpp  DomainFolder.h  DomainModule.cpp  DomainModule.h  DomainModule.reflected.h
Source/Editor/GUI/: ContextCreateItem.h  ContextMenuItem.h  CreateFolderContextAction.cpp  CreateFolderContextAction.h  CreateFolderContextMenuItem.cpp  CreateFolderContextMenuItem.h  CustomThumbnail.h  GUIColorVariables.h  GUIDirection.h  GUIDockNodeFlags.h  GUIRenderingContext.cpp  GUIRenderingContext.h  GUIRenderingContextCreateModule.cpp  GUIRenderingContextCreateModule.h  GUIStyleVariables.h  GUITheme.cpp  GUITheme.h  GUIViewport.cpp  GUIViewport.h  GUIViewportFlags.h  GUIWindowFlags.h  IContextCreateAction.cpp  IContextCreateAction.h  IContextMenuItem.cpp  IContextMenuItem.h  IThumbnail.h  TextureThumbnail.cpp  TextureThumbnail.h
Source/Editor/Game/: EditorGameAPI.cpp  EditorGameAPI.h  GameState.h
Source/Editor/ImGui/: ImGuiAPI.cpp  ImGuiAPI.h  ImGuiModule.cpp  ImGuiModule.h  ImGuiRenderEndModule.cpp  ImGuiRenderEndModule.h  ImGuiRenderStartModule.cpp  ImGuiRenderStartModule.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiTextureBinding.cpp  ImGuiTextureBinding.h  ImGuiUtils.cpp  ImGuiUtils.h
Source/Editor/Project/: ProjectAPI.cpp  ProjectAPI.h  ProjectDescriptor.h  ProjectDescriptor.reflected.h  ProjectGenerator.cpp  ProjectGenerator.h  ProjectModule.cpp  ProjectModule.h  ProjectModule.reflected.h  ProjectPaths.h
Source/Editor/Resource/: CustomResourceImporterAttribute.h  CustomResourceSerializer.h  EditorResource.h  EditorResourceAPI.cpp  EditorResourceAPI.h  EditorResourceModule.cpp  EditorResourceModule.h  EditorResourceType.h  EditorTextureResource.cpp  EditorTextureResource.h  IResourceImporter.h  IResourceSerializer.h  ResourceSerializerAttribute.h
Source/EditorPlayer/: CMakeLists.txt  EditorPlayerApplication.cpp  EditorPlayerApplication.h  EditorPlayerGDeviceModule.cpp  EditorPlayerGDeviceModule.h  EditorPlayerGDeviceModule.reflected.h  EditorPlayerProjectModule.cpp  EditorPlayerProjectModule.h  EditorPlayerProjectModule.reflected.h  EditorPlayerWindowModule.cpp  EditorPlayerWindowModule.h  EditorPlayerWindowModule.reflected.h  ReflectionManifest.h  main.cpp
Source/Runtime/: CMakeLists.txt  MyAttribute.h  MyAttribute.reflected.h  ReflectionManifest.h  TestClass.h  TestClass.reflected.h  main.cpp
Source/Runtime/Application/: Application.cpp  Application.h  ApplicationModule.cpp  ApplicationModule.h  ApplicationModule.reflected.h  ApplicationModuleState.h
Source/Runtime/Console/: ConsoleColor.h
Source/Runtime/Containers/: Array.h  Guid.cpp  Guid.h  Guid.reflected.h  HashMap.h  Iterator.h  LinkedList.h  Queue.h  Registry.h  String.cpp  String.h  String.reflected.h
Source/Runtime/Core/: Core.cpp  Core.h
Source/Runtime/D3D12/: D3DIncludes.h
Source/Runtime/DirectInput/: DirectInputDevice.cpp  DirectInputDevice.h  DirectInputKeyboard.cpp  DirectInputKeyboard.h  DirectInputKeys.cpp  DirectInputKeys.h  DirectInputMouse.cpp  DirectInputMouse.h  DirectInputSubsystem.cpp  DirectInputSubsystem.h
Source/Runtime/Event/: Delegate.h  Event.h
Source/Runtime/Font/: FontBuffer.cpp  FontBuffer.h  FontBufferDesc.h  FontLoader.cpp  FontLoader.h  FontPixelMode.h  FontStyle.h  FontThickness.h
Source/Runtime/Fonts/: FontLoader.cpp  FontLoader.h
Source/Runtime/Graphics/: GraphicsAPI.cpp  GraphicsAPI.h  GraphicsBackend.h  GraphicsModule.cpp  GraphicsModule.h
Source/Runtime/Input/: GamepadButtons.h  GamepadInputDevice.h  GamepadThumbs.h  GamepadTriggers.h  InputDevice.h  InputDeviceType.h  KeyboardInputDevice.cpp  KeyboardInputDevice.h  KeyboardKeys.h  MouseButtons.h  MouseInputDevice.cpp  MouseInputDevice.h
Source/Runtime/Job/: IJob.h  JobSystem.cpp  JobSystem.h
Source/Runtime/Math/: Color4.h  Math.h  Matrix3x3F.h  Matrix4x4.h  Matrix4x4F.h  Vector2.h  Vector2F.h  Vector2I.h  Vector2UI.h  Vector2US.h  Vector3.h  Vector4.h
Source/Runtime/Memory/: Memory.cpp  Memory.h  MemoryOwnedView.cpp  MemoryOwnedView.h  MemoryView.cpp  MemoryView.h  SharedHeap.h
Source/Runtime/Message/: MessageFlags.h
Source/Runtime/Monitor/: MonitorDisplayMode.h
Source/Runtime/Object/: API.h  Object.cpp  Object.h  Object.reflected.h
Source/Runtime/Platform/: Platform.cpp  Platform.h  PlatformClipboard.cpp  PlatformClipboard.h  PlatformConsole.cpp  PlatformConsole.h  PlatformCriticalSection.cpp  PlatformCriticalSection.h  PlatformDialog.cpp  PlatformDialog.h  PlatformDirectory.cpp  PlatformDirectory.h  PlatformError.cpp  PlatformError.h  PlatformFile.cpp  PlatformFile.h  PlatformGuid.cpp  PlatformGuid.h  PlatformHardware.cpp  PlatformHardware.h  PlatformIcon.cpp  PlatformIcon.h  PlatformInput.cpp  PlatformInput.h  PlatformLibrary.cpp  PlatformLibrary.h  PlatformMessage.cpp  PlatformMessage.h  PlatformMonitor.cpp  PlatformMonitor.h  PlatformMutex.cpp  PlatformMutex.h  PlatformPaths.cpp  PlatformPaths.h  PlatformProcess.cpp  PlatformProcess.h  PlatformRegistry.cpp  PlatformRegistry.h  PlatformThread.cpp  PlatformThread.h  (+6 more)
Source/Runtime/Reflection/: Assembly.h  Attribute.h  Attribute.reflected.h  Class.h  EnumDataType.h  EnumType.h  EnumValue.h  Field.cpp  Field.h  FieldMode.h  ModuleAddressDispatcher.h  Reflection.h  ReflectionAPI.cpp  ReflectionAPI.h  ReflectionManifest.cpp  ReflectionManifest.h  ReflectionModule.cpp  ReflectionModule.h  ReflectionModule.reflected.h  ReflectionPrimitives.h  Type.cpp  Type.h  TypeCodes.h  TypeDispatcher.cpp  TypeDispatcher.h  TypeModes.h
Source/Runtime/Rendering/: RenderGraph.cpp  RenderGraph.h  RenderGraph.reflected.h  RenderOperation.cpp  RenderOperation.h  RenderOperation.reflected.h
Source/RuntimeTest/: CMakeLists.txt  VulkanApplication.cpp  VulkanApplication.h  VulkanGraphicsModule.cpp  VulkanGraphicsModule.h  VulkanWindowCreateModule.cpp  VulkanWindowCreateModule.h  main.cpp
(+548 files in other folders)
